clusters/homelab/workloads/prd/manifests/myapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: prd-apps
  labels:
    app.kubernetes.io/name: myapp
    app.kubernetes.io/part-of: workloads-prd
    homelab.io/environment: prd
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: myapp
  template:
    metadata:
      labels:
        app.kubernetes.io/name: myapp
        homelab.io/environment: prd
    spec:
      imagePullSecrets:
        - name: ar-image-pull-secret
      containers:
        - name: myapp
          image: us-central1-docker.pkg.dev/homelab-492918/homelab-apps/myapp:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          livenessProbe:
            httpGet:
              path: /status/200
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /status/200
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
